--- a/ECommerce514/Views/Home/Index.cshtml
+++ b/ECommerce514/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                             <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT: @item.Discount%</div>
                         }
                         <!-- Product image-->
-                    <img class="card-img-top" src="~/images/@item.MainImg" alt="..." />
+                        <a href="/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -51,7 +51,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details/@item.ProductId">Show Details</a></div>
                     </div>
                 </div>
             </div>
