--- a/ECommerce514/Views/Home/Index.cshtml
+++ b/ECommerce514/Views/Home/Index.cshtml
@@ -13,50 +13,137 @@
         </div>
     </div>
 </header>
-<!-- Section-->
-<section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+<!-- Filter Section -->
+<section class="py-3 filter-bar">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <form action="">
+                    <div class="row">
+                        <!-- Product Name -->
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="Product Name" name="productName" value="@ViewBag.productName">
+                        </div>
 
-            @foreach(var item in Model)
-            {
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">@item.Category.Name</div>
-                        <!-- Hot badge-->
-                        @if(item.Discount > discountThreshold)
-                        {
-                            <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT: @item.Discount%</div>
-                        }
-                        <!-- Product image-->
-                        <a href="/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">@item.Name</h5>
-                            <!-- Product reviews-->
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
+                        <!-- Price Range -->
+                        <div class="col-md-2">
+                            <input type="number" class="form-control" placeholder="Min Price" name="minPrice" value="@ViewBag.minPrice">
+                        </div>
+                        <div class="col-md-2">
+                            <input type="number" class="form-control" placeholder="Max Price" name="maxPrice">
+                        </div>
+
+                        <!-- Category -->
+                        <div class="col-md-2">
+                            <select name="categoryId" class="form-control">
+                                <option>All Categories</option>
+                                @if (ViewData["listOfCategories"] is List<Category> categories)
+                                {
+                                    @foreach (var item in categories)
+                                    {
+                                        if (ViewData["categoryId"] is int categoryId)
+                                        {
+                                            if (categoryId == item.Id)
+                                            {
+                                                <option value="@item.Id" selected>@item.Name</option>
+                                            }
+                                            else
+                                            {
+                                                <option value="@item.Id">@item.Name</option>
+                                            }
+                                        } 
+                                        else
+                                        {
+                                            <option value="@item.Id">@item.Name</option>
+                                        }
+                                    }
+                                }
+                            </select>
+                        </div>
+
+                        <!-- Rating -->
+                        @* <div class="col-md-2"> *@
+                        @*     <select name="rating" class="form-control"> *@
+                        @*         <option value="">Any Rating</option> *@
+                        @*         <option>option 1</option> *@
+                        @*         <option>option 2</option> *@
+                        @*         <option>option 3</option> *@
+                        @*     </select> *@
+                        @* </div> *@
+
+                        <!-- Hot Product Checkbox -->
+                        <div class="col-md-1">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input">
+                                <label class="form-check-label">Hot</label>
                             </div>
-                            <!-- Product price-->
-                            <span class="text-muted text-decoration-line-through">@item.Price.ToString("c")</span>
-                                @((item.Price - (item.Price * (decimal)(item.Discount / 100.0))).ToString("c"))
+                        </div>
+
+                        <!-- Submit Button -->
+                        <div class="col-md-2">
+                            <button type="submit" class="btn btn-dark w-100">Filter</button>
                         </div>
                     </div>
-                    <!-- Product actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details/@item.ProductId">Show Details</a></div>
-                    </div>
-                </div>
+                </form>
             </div>
-            }
-            
         </div>
     </div>
 </section>
+<!-- Section-->
+@if (Model.Count() == 0)
+{
+    <div class="row m-5">
+        <class class="col-12">
+            <div class="display-5 d-flex justify-content-center align-content-center">No Items</div>
+        </class>
+    </div>
+}
+else
+{
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+
+                @foreach (var item in Model)
+                {
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">@item.Category.Name</div>
+                            <!-- Hot badge-->
+                            @if (item.Discount > discountThreshold)
+                            {
+                                <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT: @item.Discount%</div>
+                            }
+                            <!-- Product image-->
+                            <a href="/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">@item.Name</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                    </div>
+                                    <!-- Product price-->
+                                    <span class="text-muted text-decoration-line-through">@item.Price.ToString("c")</span>
+                                    @((item.Price - (item.Price * (decimal)(item.Discount / 100.0))).ToString("c"))
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details/@item.ProductId">Show Details</a></div>
+                            </div>
+                        </div>
+                    </div>
+                }
+
+            </div>
+        </div>
+    </section>
+}
