--- a/ECommerce514/Areas/Customer/Views/Home/Details.cshtml
+++ b/ECommerce514/Areas/Customer/Views/Home/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using ECommerce514.ViewModels
-@model ProductWithRelatedVM
+﻿@model ProductWithRelatedVM
 
 @{
     var discountThreshold = 50;
@@ -56,7 +55,7 @@
                                 <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT: @item.Discount%</div>
                             }
                             <!-- Product image-->
-                            <a href="/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
+                            <a href="/Customer/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -77,7 +76,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details/@item.ProductId">Show Details</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Customer/Home/Details/@item.ProductId">Show Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -115,7 +114,7 @@
                                 <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT: @item.Discount%</div>
                             }
                             <!-- Product image-->
-                            <a href="/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
+                            <a href="/Customer/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -136,12 +135,11 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details/@item.ProductId">Show Details</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Customer/Home/Details/@item.ProductId">Show Details</a></div>
                             </div>
                         </div>
                     </div>
                 }
-
             </div>
         }
     </div>
@@ -174,7 +172,7 @@
                                 <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT: @item.Discount%</div>
                             }
                             <!-- Product image-->
-                            <a href="/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
+                            <a href="/Customer/Home/Details/@item.ProductId"><img class="card-img-top" src="~/images/@item.MainImg" alt="..." /></a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -195,7 +193,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details/@item.ProductId">Show Details</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Customer/Home/Details/@item.ProductId">Show Details</a></div>
                             </div>
                         </div>
                     </div>
