--- a/ECommerce514/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce514/Views/Shared/_AdminLayout.cshtml
@@ -56,10 +56,10 @@
                         <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="/admin/category/Index">Category</a>
-                                <a class="nav-link" href="">Product</a>
-                                <a class="nav-link" href="">Brand</a>
-                                <a class="nav-link" href="">Users</a>
-                                <a class="nav-link" href="">Orders</a>
+                                <a class="nav-link" href="/admin/product/Index">Product</a>
+                                <a class="nav-link" href="/admin/brand/Index">Brand</a>
+                                <a class="nav-link" href="/admin/user/Index">Users</a>
+                                <a class="nav-link" href="/admin/order/Index">Orders</a>
                             </nav>
                         </div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
