--- a/ECommerce514/Areas/Admin/Views/Brand/Index.cshtml
+++ b/ECommerce514/Areas/Admin/Views/Brand/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Brand>
 
+
 <div class="container">
     <div class="row mb-3 align-items-center my-3">
         <div class="col-md-6">
@@ -12,6 +13,16 @@
 
     <div class="row">
         <div class="col-12">
+
+            @if (@TempData["success-notification"] is not null)
+            {
+                @section Scripts {
+                    <script>
+                        toastr.success('@TempData["success-notification"]')
+                    </script>
+                }
+            }
+
             <table class="table table-hover">
                 <thead>
                     <tr>
