--- a/ECommerce514/Areas/Admin/Views/Category/Index.cshtml
+++ b/ECommerce514/Areas/Admin/Views/Category/Index.cshtml
@@ -12,6 +12,16 @@
 
     <div class="row">
         <div class="col-12">
+
+            @if(@TempData["success-notification"] is not null)
+            {
+                @section Scripts {
+                    <script>
+                        toastr.success('@TempData["success-notification"]')
+                    </script>
+                }
+            }
+
             <table class="table table-hover">
                 <thead>
                     <tr>
