--- a/ECommerce514/Areas/Admin/Views/Product/Create.cshtml
+++ b/ECommerce514/Areas/Admin/Views/Product/Create.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row my-3">
         <div class="col-12">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name" name="Name">
@@ -25,7 +25,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="mainImg" class="form-label">MainImg</label>
-                    <input type="text" class="form-control" id="mainImg" name="mainImg">
+                    <input type="file" class="form-control" id="mainImg" name="mainImg" accept="image/*" onchange="previewImage(event)">
+                    <img id="imagePreview" src="#" alt="Image Preview" class="img-thumbnail mt-2" style="display: none; max-height: 200px;" />
                 </div>
                 <div class="mb-3">
                     <label for="categoryId" class="form-label">CategoryId</label>
@@ -59,3 +60,19 @@
         </div>
     </div>
 </div>
+
+<script>
+    function previewImage(event) {
+        const input = event.target;
+        const preview = document.getElementById('imagePreview');
+
+        if (input.files && input.files[0]) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                preview.src = e.target.result;
+                preview.style.display = 'block';
+            };
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+</script>
