--- a/ECommerce514/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ECommerce514/Areas/Admin/Views/Product/Edit.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row my-3">
         <div class="col-12">
-            <form method="post">
+            <form enctype="multipart/form-data" method="post">
                 @* <input type="hidden" name="ProductId" value="@Model.Product.ProductId" /> *@
 
                 <div class="mb-3">
@@ -26,8 +26,21 @@
                     <input type="number" class="form-control" id="quantity" name="quantity" value="@Model.Product.Quantity">
                 </div>
                 <div class="mb-3">
-                    <label for="mainImg" class="form-label">MainImg</label>
-                    <input type="text" class="form-control" id="mainImg" name="mainImg" value="@Model.Product.MainImg">
+                    <label for="mainImg" class="form-label">Main Image</label>
+                    <input type="file" class="form-control" id="mainImg" name="mainImg" accept="image/*" onchange="previewImage(event)">
+
+                    <!-- Show current image if exists -->
+                    @if (!string.IsNullOrEmpty(Model.Product.MainImg))
+                    {
+                        <img id="imagePreview" src="~/images/@Model.Product.MainImg" class="img-thumbnail mt-2" style="max-height: 200px;" />
+                    }
+                    else
+                    {
+                        <img id="imagePreview" src="#" class="img-thumbnail mt-2" style="display:none; max-height: 200px;" />
+                    }
+
+                    <!-- Hidden input to keep the old image if not changed -->
+                    <input type="hidden" name="OldMainImg" value="~/images/@Model.Product.MainImg" />
                 </div>
                 <div class="mb-3">
                     <label for="categoryId" class="form-label">Category Name</label>
@@ -84,3 +97,19 @@
         </div>
     </div>
 </div>
+
+<script>
+    function previewImage(event) {
+        const input = event.target;
+        const preview = document.getElementById('imagePreview');
+
+        if (input.files && input.files[0]) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                preview.src = e.target.result;
+                preview.style.display = 'block';
+            };
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+</script>
