--- a/ECommerce514/Areas/Admin/Views/Product/Create.cshtml
+++ b/ECommerce514/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CategoriesWithBrandsVM
+﻿@model CategoriesWithBrandsWithProductVM
 
 <div class="container">
     <div class="row my-3">
@@ -6,54 +6,85 @@
             <form method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="Name">
+                    <input type="text" class="form-control" asp-for="Product.Name">
+                    <span class="text-danger" asp-validation-for="Product.Name"></span>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <div class="form-floating">
-                        <textarea class="form-control" placeholder="Leave a description here" id="description" style="height: 100px" name="description"></textarea>
+                        <textarea class="form-control" placeholder="Leave a description here" style="height: 100px" asp-for="Product.Description"></textarea>
                         <label for="description">You Desciption Here...</label>
                     </div>
+                    <span class="text-danger" asp-validation-for="Product.Description"></span>
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label">Price</label>
-                    <input type="number" class="form-control" id="price" name="price">
+                    <input type="number" class="form-control" asp-for="Product.Price">
+                    <span class="text-danger" asp-validation-for="Product.Price"></span>
                 </div>
                 <div class="mb-3">
                     <label for="quantity" class="form-label">Quantity</label>
-                    <input type="number" class="form-control" id="quantity" name="quantity">
+                    <input type="number" class="form-control" asp-for="Product.Quantity">
+                    <span class="text-danger" asp-validation-for="Product.Quantity"></span>
                 </div>
                 <div class="mb-3">
                     <label for="mainImg" class="form-label">MainImg</label>
                     <input type="file" class="form-control" id="mainImg" name="mainImg" accept="image/*" onchange="previewImage(event)">
                     <img id="imagePreview" src="#" alt="Image Preview" class="img-thumbnail mt-2" style="display: none; max-height: 200px;" />
+                    <span class="text-danger" asp-validation-for="Product.MainImg"></span>
                 </div>
                 <div class="mb-3">
-                    <label for="categoryId" class="form-label">CategoryId</label>
-                    @* <input type="number" class="form-control" id="categoryId" name="categoryId"> *@
-                    <select name="CategoryId" class="form-select">
-                        @foreach(var item in Model.Categories)
+                    <label for="categoryId" class="form-label">Category Name</label>
+                    @* <input type="number" class="form-control" id="categoryId" name="categoryId" value="@Model.Product.CategoryId"> *@
+                    <select asp-for="Product.CategoryId" class="form-select">
+                        @foreach (var item in Model.Categories)
                         {
-                            <option value="@item.Id" >@item.Name</option>
+                            if (item.Id == Model.Product.CategoryId)
+                            {
+                                <option value="@item.Id" selected>@item.Name</option>
+                            }
+                            else
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
                         }
                     </select>
+                    <span class="text-danger" asp-validation-for="Product.CategoryId"></span>
                 </div>
                 <div class="mb-3">
-                    <label for="brandId" class="form-label">BrandId</label>
-                    @* <input type="number" class="form-control" id="brandId" name="brandId"> *@
-                    <select name="BrandId" class="form-select">
+                    <label for="brandId" class="form-label">Brand Name</label>
+                    @* <input type="number" class="form-control" id="brandId" name="brandId" value="@Model.Product.BrandId"> *@
+                    <select asp-for="Product.BrandId" class="form-select">
                         @foreach (var item in Model.Brands)
                         {
-                            <option value="@item.Id">@item.Name</option>
+                            if (item.Id == Model.Product.BrandId)
+                            {
+                                <option value="@item.Id" selected>@item.Name</option>
+                            }
+                            else
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
                         }
                     </select>
+                    <span class="text-danger" asp-validation-for="Product.BrandId"></span>
                 </div>
                 <div class="mb-3">
                     <label for="status" class="form-label">Status</label>
-                    <select name="status" class="form-select">
-                        <option value="true">Active</option>
-                        <option value="false">InActive</option>
+                    <select asp-for="Product.Status" class="form-select">
+
+                        @if (Model.Product.Status)
+                        {
+                            <option value="true" selected>Active</option>
+                            <option value="false">InActive</option>
+                        }
+                        else
+                        {
+                            <option value="true">Active</option>
+                            <option value="false" selected>InActive</option>
+                        }
                     </select>
+                    <span class="text-danger" asp-validation-for="Product.Status"></span>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
