--- a/ECommerce514/Areas/Admin/Views/Brand/Edit.cshtml
+++ b/ECommerce514/Areas/Admin/Views/Brand/Edit.cshtml
@@ -7,12 +7,14 @@
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name" name="Name" value="@Model.Name">
+                    <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <div class="form-floating">
                         <textarea class="form-control" placeholder="Leave a description here" id="description" style="height: 100px" name="description">@Model.Description</textarea>
                         <label for="description">You Desciption Here...</label>
+                        <span class="text-danger" asp-validation-for="Description"></span>
                     </div>
                 </div>
                 <div class="mb-3">
@@ -30,6 +32,7 @@
                             <option value="false" selected >InActive</option>
                         }
                     </select>
+                    <span class="text-danger" asp-validation-for="Status"></span>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
