--- a/ECommerce514/Areas/Customer/Views/Home/Index.cshtml
+++ b/ECommerce514/Areas/Customer/Views/Home/Index.cshtml
@@ -4,6 +4,24 @@
     var discountThreshold = 50;
 }
 
+@if (@TempData["success-notification"] is not null)
+{
+    @section Scripts {
+    <script>
+        toastr.success('@TempData["success-notification"]')
+    </script>
+    }
+}
+
+@if (@TempData["error-notification"] is not null)
+{
+    @section Scripts {
+    <script>
+        toastr.error('@TempData["error-notification"]')
+    </script>
+    }
+}
+
 <!-- Header-->
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
