--- a/ECommerce514/Areas/Admin/Views/User/Index.cshtml
+++ b/ECommerce514/Areas/Admin/Views/User/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@using ECommerce514.Utility
-@model IEnumerable<Category>
+@model Dictionary<ApplicationUser, string>
 
 <div class="container">
     <div class="row mb-3 align-items-center my-3">
         <div class="col-md-6">
-            <h2 class="display-6">All Categories</h2>
+            <h2 class="display-6">All Users</h2>
         </div>
-        @if(User.IsInRole(SD.SuperAdmin) || User.IsInRole(SD.Admin))
+        @if (User.IsInRole(SD.SuperAdmin) || User.IsInRole(SD.Admin))
         {
             <div class="col-md-6 text-md-end text-start mt-2 mt-md-0">
-                <a href="/Admin/Category/Create" class="btn btn-success">Create</a>
+                <a href="/Admin/User/Create" class="btn btn-success">Create</a>
             </div>
         }
     </div>
@@ -17,22 +17,22 @@
     <div class="row">
         <div class="col-12">
 
-            @if(@TempData["success-notification"] is not null)
+            @if (@TempData["success-notification"] is not null)
             {
                 @section Scripts {
                 <script>
                     toastr.success('@TempData["success-notification"]')
                 </script>
-                }
+            }
             }
 
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
                         <th scope="col">Name</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Status</th>
+                        <th scope="col">UserName</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Roles</th>
                         @if (User.IsInRole(SD.SuperAdmin) || User.IsInRole(SD.Admin))
                         {
                             <th scope="col">Actions</th>
@@ -40,37 +40,35 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach(var item in Model)
+                    @foreach (var item in Model.Keys)
                     {
                         <tr>
-                            <th scope="row">@item.Id</th>
-                            <td>@item.Name</td>
-                            @if (item.Description is not null && item.Description.Length > 50)
-                            {
-                                <td>@item.Description.Substring(0, 50)...</td>
-                            }
-                            else
-                            {
-                                <td>@item.Description</td>
-                            }
-                            @if (item.Status)
-                            {
-                                <td><span class="badge text-bg-primary">@item.Status</span></td>
-                            }
-                            else
-                            {
-                                <td><span class="badge text-bg-danger">@item.Status</span></td>
-                            }
+                            <th scope="row">@(item.FirstName + " " + item.LastName)</th>
+                            <td>@item.UserName</td>
+                            <td>@item.Email</td>
+                            <td>@Model[item]</td>
                             @if (User.IsInRole(SD.SuperAdmin) || User.IsInRole(SD.Admin))
                             {
                                 <td>
-                                    <a href="/Admin/Category/Edit/@item.Id" type="button" class="btn btn-warning">Edit</a>
-                                    <a href="/Admin/Category/Delete/@item.Id"
-                                       class="btn btn-danger btn-delete"
-                                       data-id="@item.Id">Delete</a>
+                                    <a href="/Admin/User/Edit/@item.Id" type="button" class="btn btn-warning">Edit</a>
+
+                                    @if (!Model[item].Contains(SD.SuperAdmin))
+                                    {
+                                        @if (item.LockoutEnabled)
+                                        {
+                                            <a href="/Admin/User/LockUnLock/@item.Id" type="button" class="btn btn-primary">Block</a>
+                                        }
+                                        else
+                                        {
+                                            <a href="/Admin/User/LockUnLock/@item.Id" type="button" class="btn btn-danger">Un Block</a>
+                                        }
+                                        <a href="/Admin/User/Delete/@item.Id"
+                                           class="btn btn-danger btn-delete"
+                                           data-id="@item.Id">Delete</a>
+                                    }
                                 </td>
                             }
-                            
+
                         </tr>
                     }
                 </tbody>
