--- a/ECommerce514/Areas/Identity/Views/Account/Login.cshtml
+++ b/ECommerce514/Areas/Identity/Views/Account/Login.cshtml
@@ -53,6 +53,8 @@
     <div>
         <a asp-action="Index">Back to List</a>
         <a asp-action="Register">Register</a>
+        <a asp-action="ResendEmailConfirmation">Resend Email Confirmation</a>
+        <a asp-action="ForgetPassword">Forget Password</a>
     </div>
 
 </div>
